[247] Added chapter files

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -7,38 +7,27 @@
 
 \begin{document}
 
-\author{Jan Kowalski}
+\author{}
 \title{Tytuł pracy}
 \supervisor{dr hab.~Stefan Nowak}
-\date{Poznań, 2013}
+\date{Poznań, 2014}
 \maketitle
 \frontmatter
 \tableofcontents{}
 \mainmatter
 
-\chapter{Wstęp}
-
-Wprowadzenie do tematu...
-
-\section*{Cel i zakres pracy}
-
-Celem niniejszej pracy jest...
-
-\chapter{Podstawy teoretyczne}
-
-Więcej informacji można znaleźć w książce \cite{sop}.
-
-\chapter{Projekt systemu}
-
-\chapter{Implementacja systemu}
-
-\chapter{Testy efektywnościowe}
-
-\chapter{Zakończenie}
+\input{./tex/intro.tex}
+\input{./tex/planning.tex}
+\input{./tex/specification.tex}
+\input{./tex/used-software.tex}
+\input{./tex/architecture.tex}
+\input{./tex/implementation.tex}
+\input{./tex/tests.tex}
+\input{./tex/summary.tex}
 
 \appendix
 
-\chapter{Przewodnik użytkownika}
+\chapter{Zawartość płyty CD}
 
 \backmatter
 
