--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -6,9 +6,11 @@
 
 \begin{document}
 
-\author{}
-\title{Tytuł pracy}
-\supervisor{dr hab.~Stefan Nowak}
+\university
+\institute
+\author{Tomasz Boczkowski \and Mateusz Michalak \and Andrzej Płuszka \and Wojciech Rybicki}
+\title{GUI4PDDL: Graficzne narzędzie do opisu problemów automatycznego planowania}
+\supervisor{dr inż.~Agnieszka Ławrynowicz}
 \date{Poznań, 2014}
 \maketitle
 \frontmatter
